# animalharmbench-testbed

./: .env.example  .gitattributes  .gitignore  README.md  flash_attn-2.8.3+cu128torch2.8-cp313-cp313-linux_x86_64.whl  pipeline.py  pyproject.toml
inputs/: settings.yml
results/qwen3-32b-antispeciesist/validation/base-model/: 001-answers-to-statement-1.csv  002-answers-to-statement-17.csv  003-answers-to-statement-26.csv  008-answers-to-statement-64.csv  010-answers-to-statement-67.csv  011-answers-to-statement-97.csv  012-answers-to-statement-99.csv  014-answers-to-statement-117.csv  016-answers-to-statement-129.csv
results/qwen3-32b-antispeciesist/validation/checkpoint-0210/: 001-answers-to-statement-1.csv  002-answers-to-statement-17.csv  006-answers-to-statement-45.csv  007-answers-to-statement-60.csv  009-answers-to-statement-66.csv  010-answers-to-statement-67.csv  011-answers-to-statement-97.csv  014-answers-to-statement-117.csv  016-answers-to-statement-129.csv
results/qwen3-32b-antispeciesist/validation/post-distill/: 003-answers-to-statement-26.csv  005-answers-to-statement-38.csv
results/qwen3-32b-antispeciesist/validation/pre-distill/: 004-answers-to-statement-32.csv  007-answers-to-statement-60.csv
results/qwen3-32b-speciesist/: answers.pkl
results/qwen3-32b/lora-antispeciesist/post-distill/: adapter_config.json  adapter_model.safetensors  chat_template.jinja
src/: ahb_v1.py  config.py  datagen.py  download.py  eval.py  server.py  settings.yml  settings_dev.yml  sft.py  speciesismbench.py  stats.py  upload.py  viz.py
(+35 files in other folders)
